@@ -1,0 +1,7 @@
+type Nfs::SecurityFlavor = Enum[
+  'none',
+  'sys',
+  'krb5',
+  'krb5i',
+  'krb5p'
+]
