@@ -1,3 +1,10 @@
+* Mon Apr 16 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.2-0
+- Added `nfs::client::mount::autodetect_remote` to override all autodetection
+  of whether or not the remote host was the current NFS server so an NFS
+  server can mount NFS directories from other servers.
+- Added `nfs::client::mount::stunnel` to allow users to dictate the stunnel
+  connection state for specific mounts.
+
 * Wed Apr 04 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.1-0
 - On systemd systems, the stunnel service is now a dependency of the NFS
   servers and mounts managed by this module.
